<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".NewMessageActivity">

    <TextView
        android:id="@+id/text_newmessage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/newmessage_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/text_newmessage_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_newmessage_title"
        android:layout_below="@+id/text_newmessage_title"
        android:text="@string/newmessage_prompt"
        android:textAppearance="?android:attr/textAppearanceSmall"
       />

    <EditText
        android:id="@+id/edittext_newmessage_recipient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_newmessage_prompt"
        android:layout_below="@+id/text_newmessage_prompt"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="phone"
        >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edittext_newmessage_recipient"
        android:layout_below="@+id/edittext_newmessage_recipient"
        android:layout_marginTop="20dp"
        android:text="@string/button_Authenticate"
        ></Button>
     <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edittext_newmessage_recipient"
        android:layout_below="@+id/button_auth"
        android:layout_marginTop="20dp"
        android:text="@string/button_Cancel"
        ></Button>

</RelativeLayout>