<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="viewStart"
    tools:context=".ChangePinPassActivity" >

        <RelativeLayout
            android:id="@+id/relativeLayout_changepass"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView_changepass_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/changepass_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:id="@+id/textView_changepass_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView_changepass_title"
                android:text="@string/changepass_prompt"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

            <EditText
                android:id="@+id/text_changepass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView_changepass_prompt"
                android:ems="10"
                android:inputType="textPassword"
                />

            <TextView
                android:id="@+id/textView_changpass_reprompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_changepass"
                android:text="@string/changepass_reprompt"
                android:textAppearance="?android:attr/textAppearanceSmall"
                 />

            <EditText
                android:id="@+id/text_changepass_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView_changpass_reprompt"
                android:ems="10"
                android:inputType="textPassword"
                 />

            <Button
                android:id="@+id/button_changepass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_changepass_again"
                android:onClick="changePass"
                android:text="@string/button_Authenticate"
               />
        </RelativeLayout>

</RelativeLayout>