<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="right"
    android:textAlignment="viewStart"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/text_name_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:minHeight="20dp"
        android:padding="5dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/text_hs_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_name_number"
        android:background="#ff0000"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:minHeight="20dp"
        android:padding="5dp"
        android:text="@string/not_encrypted"
        android:visibility="gone" >
    </TextView>

    <LinearLayout
        android:id="@+id/rule_2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/box_MessageSend"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rule_1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/text_hs_status"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
    </LinearLayout>

    <ListView
        android:id="@+id/listView_MessageHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rule_2"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rule_1"
        android:stackFromBottom="true"
        android:transcriptMode="normal" >
    </ListView>

    <LinearLayout
        android:id="@id/box_MessageSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:baselineAligned="true"
        android:padding="5dp" >

        <EditText
            android:id="@+id/text_message"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button_startHandshake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_start_handshake"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_SendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send_text" />
    </LinearLayout>

</RelativeLayout>